fix email form name alignment

--- a/css/call.css
+++ b/css/call.css
@@ -1138,17 +1138,25 @@ a:hover {
 
 #app #fullName{
     display: flex;
+    justify-content: space-between;    
     align-items: center;
     background-color: #fff;
     border-bottom: 1px solid #ccc;
     border-radius: 3px;
     box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.076);   
     border: 1px solid #bdbdbd;
-    height: 80px; 
+    height: 80px;
 }
+
  input.name{
-     background-color: transparent
+     background-color: transparent;
  }
+
+ #app .email-form form input.name {
+    height: 78px;
+    margin-top: 1px;
+ }
+
 #app #title {
     grid-area: mytitle;
 }
